Fix bug where Replay button was too big

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -76,7 +76,7 @@ h2 {
 }
 
 #btn-container > * {
-    flex: 1 1 0;
+    flex: 0 0 94px;
 }
 
 button {
